cabal-version: 1.12

name:           vmc-mixer
version:        0.2.1.0
description:    Please see the README on GitHub at <https://github.com/Cj-bc/vmc-mixer#readme>
homepage:       https://github.com/Cj-bc/vmc-mixer#readme
bug-reports:    https://github.com/Cj-bc/vmc-mixer/issues
author:         Cj.bc_sd a.k.a Cj-bc
maintainer:     cj.bc-sd@outlook.jp
copyright:      Cj.bc_sd a.k.a Cj-bc
license:        GPL3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    JA-README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/Cj-bc/vmc-mixer

library
  if !os(windows)
    exposed-modules:
        VMCMixer.UI.Brick.Attr
        VMCMixer.UI.Brick.Event
        VMCMixer.UI.Brick
  exposed-modules:
      VMCMixer.Parser
  other-modules:
      Paths_vmc_mixer
  hs-source-dirs:
      src
  if !os(windows)
     build-depends:
        brick
  build-depends:
      base >=4.7 && <5
    , vty
    , vector
    , text-zipper
    , microlens
    , microlens-th
    , network
    , attoparsec
    , text
  default-language: Haskell2010

executable vmc-mixer-tui
  if os(windows)
     Buildable: False
  main-is: TUI.hs
  other-modules:
      Paths_vmc_mixer
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , vmc-mixer
    , hosc
    , brick
    , vector
    , async
    , pipes-concurrency
    , pipes
    , network
    , transformers
  default-language: Haskell2010

test-suite vmc-mixer-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_vmc_mixer
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , vmc-mixer
  default-language: Haskell2010
